<resources>
    <string name="app_name">YouSeeEvents v1</string>
    <!-- Strings related to login -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_home">Home</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered? Login</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="register_account">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_incorrect_password">Incorrect Password</string>
    <string name="error_field_required">Error: Field Required</string>
    <string name="error_invalid_email">No user found with that email</string>
    <string name="permission_rationale">Not Permitted</string>
    <string name="username_hint">Username</string>
    <string name="fragment_my_events">My Events</string>
    <string name="fragment_account">Account</string>
    <string name="fragment_search">Search</string>
    <string name="fragment_home">Home</string>
    <string name="event_name_label">Event:</string>
    <string name="event_org_label">Organizer:</string>
    <string name="event_date_label">Date:\nTime:</string>
    <string name="event_location_label">Location:</string>
    <string name="event_tag_label">Tag:</string>
    <string name="user_email_login">Login</string>
    <string name="title_activity_event">Viewed Event</string>
    <string name="title_activity_create_event">Create an Event</string>
    <string name="search_hint">Search here...</string>
    <string name="org_sign_up">Organizations Click here to Sign Up</string>
    <string name="user_sign_up">UCSD Students Click here to Sign Up</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
</resources>
