<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TableLayout
        android:id="@+id/event_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/border"
        android:padding="10dp">

        <TableRow
            android:id="@+id/event_name_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/event_name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:paddingLeft="10dp"
                android:text="@string/event_name_label" />

            <TextView
                android:id="@+id/event_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:paddingRight="10dp"
                android:text="@null" />

        </TableRow>

        <TableRow
            android:id="@+id/event_date_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/event_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:paddingLeft="10dp"
                android:text="@string/event_date_label" />

            <TextView
                android:id="@+id/event_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:paddingRight="10dp"
                android:text="@null" />
        </TableRow>

        <TableRow
            android:id="@+id/event_location_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/event_location_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:paddingLeft="10dp"
                android:text="@string/event_location_label" />

            <TextView
                android:id="@+id/event_location_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:paddingRight="10dp"
                android:text="@null" />
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>