<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingTop="2.5dp"
    android:paddingRight="5dp"
    android:paddingBottom="2.5dp">

    <TableLayout
        android:id="@+id/event_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/event_border"
        android:padding="2dp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="5dp">

        <TableRow
            android:id="@+id/event_name_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="4dp">

            <ImageView
                android:id="@+id/organizerimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_group_black_24dp" />

            <TextView
                android:id="@+id/event_name_label"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:paddingLeft="10dp"
                android:text="@string/event_name_label"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/event_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:paddingRight="10dp"
                android:text="@null"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:id="@+id/event_date_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/dateimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_event_note_black_24dp" />

            <TextView
                android:id="@+id/event_date_label"
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:paddingLeft="10dp"
                android:text="@string/event_date_label"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/event_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:paddingRight="10dp"
                android:text="@null"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:id="@+id/event_location_row"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/locationimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_place_black_24dp" />

            <TextView
                android:id="@+id/event_location_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:paddingLeft="10dp"
                android:text="@string/event_location_label"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/event_location_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:paddingRight="10dp"
                android:text="@null"
                android:textColor="@android:color/black" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>