<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EventActivity"
    tools:showIn="@layout/activity_event">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/event_border"
            android:backgroundTint="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint='"Event Title"'
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                android:transitionName="event_transition" />

            <ToggleButton
                android:id="@+id/saveButton"
                style="@style/toggleButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:background="@drawable/ic_toggle_bg"
                android:checked="false"
                android:padding="0dp"
                android:stateListAnimator="@android:anim/bounce_interpolator"
                android:textAlignment="center"
                android:textOff="Save"
                android:textOn="Saved" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_border"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/organizerimg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_group_black_24dp" />

                    <TextView
                        android:id="@+id/event_organizer_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:padding="4dp"
                        android:text="@string/event_org_label" />

                    <TextView
                        android:id="@+id/event_organizer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:padding="4dp"
                        android:text="TextView" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_border"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/dateimg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_event_note_black_24dp" />

                    <TextView
                        android:id="@+id/event_datetime_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:padding="4dp"
                        android:text="@string/event_date_label" />

                    <TextView
                        android:id="@+id/event_datetime"
                        android:transitionName="event_transition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:padding="4dp"
                        android:text="TextView" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_border"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/location_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_place_black_24dp" />

                    <TextView
                        android:id="@+id/event_location_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:padding="4dp"
                        android:text="@string/event_location_label" />

                    <TextView
                        android:id="@+id/event_location"
                        android:transitionName="event_transition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:padding="4dp"
                        android:text="TextView" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_border"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tagsimg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_chat_black_24dp" />

                    <TextView
                        android:id="@+id/event_tag_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:padding="4dp"
                        android:text="Tag" />

                    <TextView
                        android:id="@+id/event_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:padding="4dp"
                        android:text="TextView" />

                </LinearLayout>

            </LinearLayout>


        </TableRow>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/event_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:background="@drawable/text_border"
                    android:text="TextView"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>